--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -9,14 +9,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>586</width>
-    <height>441</height>
+    <width>583</width>
+    <height>412</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>580</width>
-    <height>394</height>
+    <width>583</width>
+    <height>412</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>583</width>
+    <height>412</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -163,9 +169,9 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>30</y>
+        <y>32</y>
         <width>321</width>
-        <height>31</height>
+        <height>28</height>
        </rect>
       </property>
      </widget>
@@ -173,9 +179,9 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>70</y>
+        <y>72</y>
         <width>321</width>
-        <height>31</height>
+        <height>28</height>
        </rect>
       </property>
      </widget>
@@ -183,9 +189,9 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>110</y>
+        <y>112</y>
         <width>321</width>
-        <height>31</height>
+        <height>28</height>
        </rect>
       </property>
      </widget>
@@ -193,9 +199,9 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>150</y>
+        <y>152</y>
         <width>321</width>
-        <height>31</height>
+        <height>28</height>
        </rect>
       </property>
      </widget>
@@ -215,7 +221,7 @@
      <widget class="QLineEdit" name="xuhao_lastlineEdit">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>161</x>
         <y>260</y>
         <width>70</width>
         <height>18</height>
@@ -225,17 +231,30 @@
      <widget class="QLineEdit" name="xuhao_prelineEdit">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>50</x>
         <y>260</y>
         <width>70</width>
         <height>18</height>
        </rect>
       </property>
      </widget>
+     <widget class="QLabel" name="xuhao_label">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>260</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>序号</string>
+      </property>
+     </widget>
      <widget class="QWidget" name="">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>50</x>
         <y>240</y>
         <width>69</width>
         <height>15</height>
@@ -430,7 +449,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>586</width>
+     <width>583</width>
      <height>23</height>
     </rect>
    </property>
